--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "private": true,
     "scripts": {
+        "serve": "php artisan serve --host=127.0.0.1 --port=8000 | npm run hot",
         "dev": "npm run development",
         "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "npm run development -- --watch",
@@ -16,6 +17,15 @@
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@websanova/vue-auth": "^3.3.3",
+        "bootstrap": "^4.5.3",
+        "vue": "^2.6.12",
+        "vue-axios": "^3.2.1",
+        "vue-resource": "^1.5.1",
+        "vue-router": "^3.4.9"
     }
 }
