--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -16,5 +16,6 @@
     "/admin.setting.webconfig.js": "/admin.setting.webconfig.js",
     "/login.js": "/login.js",
     "/user.home.js": "/user.home.js",
-    "/vendors~admin.js": "/vendors~admin.js"
+    "/vendors~admin.js": "/vendors~admin.js",
+    "/vendors~admin.dashboard.js": "/vendors~admin.dashboard.js"
 }
