--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@websanova/vue-auth": "^3.3.8",
         "bootstrap": "^4.5.3",
+        "bootstrap-datepicker": "^1.9.0",
         "es6-promise": "^4.2.8",
         "jquery": "^3.5.1",
         "moment": "^2.24.0",
