--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -14,12 +14,12 @@
     "/admin.setting.js": "/admin.setting.js",
     "/admin.setting.user.js": "/admin.setting.user.js",
     "/admin.setting.webconfig.js": "/admin.setting.webconfig.js",
-    "/login.js": "/login.js",
-    "/user.home.js": "/user.home.js",
-    "/vendors~admin.js": "/vendors~admin.js",
     "/courses.js": "/courses.js",
+    "/courses.payment.js": "/courses.payment.js",
+    "/courses.player.js": "/courses.player.js",
     "/home.js": "/home.js",
     "/notfound404.js": "/notfound404.js",
-    "/courses.payment.js": "/courses.payment.js",
-    "/courses.player.js": "/courses.player.js"
+    "/vendors~admin.js": "/vendors~admin.js",
+    "/global.redirect.login.js": "/global.redirect.login.js",
+    "/global.redirect.js": "/global.redirect.js"
 }
