--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -17,9 +17,10 @@
     "/courses.js": "/courses.js",
     "/courses.payment.js": "/courses.payment.js",
     "/courses.player.js": "/courses.player.js",
+    "/global.redirect.js": "/global.redirect.js",
     "/home.js": "/home.js",
     "/notfound404.js": "/notfound404.js",
     "/vendors~admin.js": "/vendors~admin.js",
-    "/global.redirect.login.js": "/global.redirect.login.js",
-    "/global.redirect.js": "/global.redirect.js"
+    "/user.home.js": "/user.home.js",
+    "/courses.play.js": "/courses.play.js"
 }
