Change ChunkFile Location

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,24 +3,22 @@
     "/css/app.css": "/css/app.css",
     "/js/bootstrap.js": "/js/bootstrap.js",
     "/js/index.js": "/js/index.js",
-    "/admin.js": "/admin.js",
-    "/admin.dashboard.js": "/admin.dashboard.js",
-    "/admin.login.js": "/admin.login.js",
-    "/admin.master.js": "/admin.master.js",
-    "/admin.master.kategori.js": "/admin.master.kategori.js",
-    "/admin.master.level.js": "/admin.master.level.js",
-    "/admin.master.skill.js": "/admin.master.skill.js",
-    "/admin.master.tool.js": "/admin.master.tool.js",
-    "/admin.setting.js": "/admin.setting.js",
-    "/admin.setting.user.js": "/admin.setting.user.js",
-    "/admin.setting.webconfig.js": "/admin.setting.webconfig.js",
-    "/courses.js": "/courses.js",
-    "/courses.payment.js": "/courses.payment.js",
-    "/courses.player.js": "/courses.player.js",
-    "/global.redirect.js": "/global.redirect.js",
-    "/home.js": "/home.js",
-    "/notfound404.js": "/notfound404.js",
-    "/vendors~admin.js": "/vendors~admin.js",
-    "/user.home.js": "/user.home.js",
-    "/courses.play.js": "/courses.play.js"
+    "/js/admin.js": "/js/admin.js",
+    "/js/admin.dashboard.js": "/js/admin.dashboard.js",
+    "/js/admin.login.js": "/js/admin.login.js",
+    "/js/admin.master.js": "/js/admin.master.js",
+    "/js/admin.master.kategori.js": "/js/admin.master.kategori.js",
+    "/js/admin.master.level.js": "/js/admin.master.level.js",
+    "/js/admin.master.skill.js": "/js/admin.master.skill.js",
+    "/js/admin.master.tool.js": "/js/admin.master.tool.js",
+    "/js/admin.setting.js": "/js/admin.setting.js",
+    "/js/admin.setting.user.js": "/js/admin.setting.user.js",
+    "/js/admin.setting.webconfig.js": "/js/admin.setting.webconfig.js",
+    "/js/courses.js": "/js/courses.js",
+    "/js/courses.play.js": "/js/courses.play.js",
+    "/js/global.redirect.js": "/js/global.redirect.js",
+    "/js/home.js": "/js/home.js",
+    "/js/notfound404.js": "/js/notfound404.js",
+    "/js/user.home.js": "/js/user.home.js",
+    "/js/vendors~admin.js": "/js/vendors~admin.js"
 }
