--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -20,5 +20,7 @@
     "/js/home.js": "/js/home.js",
     "/js/notfound404.js": "/js/notfound404.js",
     "/js/user.home.js": "/js/user.home.js",
-    "/js/vendors~admin.js": "/js/vendors~admin.js"
+    "/js/vendors~admin.js": "/js/vendors~admin.js",
+    "/js/profile.edit.js": "/js/profile.edit.js",
+    "/js/profile.js": "/js/profile.js"
 }
